[package]
name = "shadow-link-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "shadow_link_rust"
path = "src/lib.rs"

[dependencies]
rand = { version = "0.8.5", features = ["std"] }
rand_core = "0.6.4"
curve25519-dalek = "4.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"]}
aes-gcm = "0.10"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3"
x25519-dalek = "2.0.1"
argon2 = { version = "0.5", features = ["password-hash"] }
hex = "0.4"
serde_json = "1.0"
sha2 = "0.10"
log = "0.4"
env_logger = "0.10"
zstd = "0.11"
tokio = { version = "1", features = ["full"] }
bs58 = "0.5"


[[bin]]
name = "node"
path = "src/bin/node.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
